applications/openeuler-certificate-center/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: openeuler-certificate-center-ingress
  namespace: openeuler-certificate-center
spec:
  tls:
    - hosts:
        - ccs-console.openeuler.org
      secretName: openeuler-org-tls
  rules:
    - host: ccs-console.openeuler.org
      http:
        paths:
          - backend:
              serviceName: website-service
              servicePort: 80
            path: /
